[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_simple_gallery"
version = "0.0.1"
authors = [
  { name="Michael Haslam", email="hreikin@gmail.com" },
]
description = "Simple gallery for use in Streamlit projects."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hreikin/streamlit-simple-gallery"
"Bug Tracker" = "https://github.com/hreikin/streamlit-simple-gallery/issues"