[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_uploads_library"
version = "0.1.0"
authors = [
  { name="Michael Haslam", email="hreikin@gmail.com" },
]
description = "A wrapper around st.file_uploader that provides a library and gallery options."
dependencies = [
  "streamlit >= 1.19.0",
  "opsdroid-get-image-size >= 0.2.2"
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hreikin/streamlit-uploads-library"
"Bug Tracker" = "https://github.com/hreikin/streamlit-uploads-library/issues"
