[metadata]
name = streamlit_uploads_library
version = 0.1.4
author = Michael Haslam
author_email = hreikin@gmail.com
url = https://github.com/hreikin/streamlit-uploads-library
description = A simple library or gallery for Streamlit made from widgets.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = streamlit, uploads, library, gallery, widgets
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    streamlit >= 1.20.0
    opsdroid-get-image-size >= 0.2.2